tests/errors/missing_type.err
Type Error: Can't find type information for function call
1: foo(a) { a }
      ^
